Mon Jun 13 22:39:04 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c added better Doxygen comments

Mon Jun 13 22:18:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/api_status.txt doc/userguide.sgml small fixes
	* doc/htdoc/faq.html added output parameters

Sat Jun 11 14:40:10 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c: minor fixes and comments

Wed Jun 08 08:38:10 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c: use rpc only for rpc
	* src/tds/query.c src/tds/tds_checks.c:
	- use on_server to send parameters

Fri Jun 03 11:01:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO include/tds.h src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/config.c src/tds/login.c src/tds/net.c:
	- removed query_timeout_func and query_timeout_param from
	  TDSLOGIN and TDSCONNECTION (rarely used)
	- merged Liam patch for timeout
	- add a total_timeout parameter to query_timeout_func

Fri Jun 03 09:15:19 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/array.c:
	* src/odbc/unittests/array_out.c:
	- SQL_ATTR_ROW_ARRAY_SIZE is no more developing stuff

Thu Jun 02 14:01:23 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: check sizeof wchar_t and SQLWCHAR

Tue May 31 11:30:15 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* doc/datacopy.txt(added) doc/Makefile.am src/apps/datacopy.c(added):
	* src/apps/Makefile.am:
	- add datacopy program and man page
	* include/sybdb.h src/dblib/dblib.c:
	- add dbtablecolinfo required for datacopy

Tue May 31 09:24:55 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- fix dbstrcpy and dbvarylen
	- reuse tds_strlcpy
	- import new dbcolinfo implementation from Bill patch
	* src/apps/Makefile.am: add replacement lib

Tue May 31 08:57:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/replacements/strl.c(added) configure.in include/replacements.h: